# paddle_cpp_backend

./: CMakeLists.txt  README.md  build.sh  env.sh
cmake/: Relies.cmake
modules/: CMakeLists.txt
modules/application/: CMakeLists.txt  least_square_trainer.cc
modules/ops/: CMakeLists.txt
modules/ops/sampling/: CMakeLists.txt  farthest_point_sampling_op.cc  farthest_point_sampling_op.cu  farthest_point_sampling_op.h  farthest_point_sampling_op_test.cc  twisted_conv2d.cc  twisted_conv2d.h
modules/ops/sampling/flags/: ops_sampling_flags.cc  ops_sampling_flags.h
modules/ops/sampling/impl/: farthest_point_sampling_op_impl.hpp
modules/ops/sampling/tmp_test_small_dataset/: download_small_dataset.sh
python/network/: linear_square_network.py  run_paddle_op_profiler  startup_program
python/network/linear_model/: main_program
python/tests/ast/: ast_transform.py
python/tests/forward/: dygraph_linear_square.py  dygraph_op.py
scripts/: build_update_boost-1.41.0_to_1.65.1.patch  install_gcc_4.8.5.sh  install_gcc_8.2.sh  install_legacy_paddle-gpu-1_8_5.sh  install_nccl.sh  install_others.sh  install_paddle_compat_pcl.sh  paddle_build.sh  paddle_envs.sh  run_farthest_sampling_op.sh  utils.sh
